--- a/quickshell/translations/poexports/tr.json
+++ b/quickshell/translations/poexports/tr.json
@@ -347,6 +347,9 @@
   "Choose where notification popups appear on screen": {
     "Choose where notification popups appear on screen": "Bildirim açılır pencerelerinin ekranda nerede görüneceğini seçin"
   },
+  "Choose where on-screen displays appear on screen": {
+    "Choose where on-screen displays appear on screen": ""
+  },
   "Clear": {
     "Clear": "Temizle"
   },
@@ -622,6 +625,9 @@
   },
   "Dismiss": {
     "Dismiss": "Reddet"
+  },
+  "Display Name Format": {
+    "Display Name Format": ""
   },
   "Display a dock with pinned and running applications that can be positioned at the top, bottom, left, or right edge of the screen": {
     "Display a dock with pinned and running applications that can be positioned at the top, bottom, left, or right edge of the screen": "Ekranın üst, alt, sol veya sağ kenarına yerleştirilebilen, sabitlenmiş ve çalışan uygulamaları içeren bir dock görüntüleyin."
@@ -1199,6 +1205,9 @@
   "Mode: ": {
     "Mode: ": "Mod: "
   },
+  "Model": {
+    "Model": ""
+  },
   "Monitor Selection:": {
     "Monitor Selection:": "Monitör Seçimi:"
   },
@@ -1222,6 +1231,9 @@
   },
   "NM not supported": {
     "NM not supported": "NM desteklenmiyor"
+  },
+  "Name": {
+    "Name": ""
   },
   "Named Workspace Icons": {
     "Named Workspace Icons": "Adlandırılmış Çalışma Alanı Simgeleri"
@@ -1348,6 +1360,9 @@
   },
   "OS Logo": {
     "OS Logo": "OS Logo"
+  },
+  "OSD Position": {
+    "OSD Position": ""
   },
   "Office": {
     "Office": "Ofis"
