--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -567,13 +567,6 @@
     "comment": ""
   },
   {
-    "term": "Blur Layer",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Blur on Overview",
     "translation": "",
     "context": "",
@@ -1597,6 +1590,13 @@
   },
   {
     "term": "Drag widgets to reorder within sections. Use the eye icon to hide/show widgets (maintains spacing), or X to remove them completely.",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Duplicate Wallpaper with Blur",
     "translation": "",
     "context": "",
     "reference": "",
